<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="SwitchScreens" Id="{6a02257c-3ca6-42d0-b540-f283b9817c7d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SwitchScreens
VAR
	screenFound : BOOL := TRUE;
	screenSearchAttempts : INT := 0;
	screenRetryInerval: INT := 10;
	wasNoScreen : BOOL := FALSE;
	
	wasEstop : BOOL := FALSE;
	wasDoorFault : BOOL := FALSE;
	wasUpLimit : BOOL := FALSE;
	wasDwnLimit : BOOL := FALSE;
	wasJogging : BOOL := FALSE;
	wasRunningToTarget : BOOL := FALSE;
	doubleWrite : BOOL := FALSE;
	wasAcknowledge : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GV_MODBUS.screen.Error THEN
	screenFound := FALSE;
	wasNoScreen := TRUE;
	
	IF screenSearchAttempts > screenRetryInerval THEN
		screenFound := TRUE;
		GV_MODBUS.readExecute := TRUE;
	END_IF
	
	screenSearchAttempts := screenSearchAttempts + 1;
ELSE
	screenFound := TRUE;
		
	IF not GV_LIFT.ESTOP_INDICATOR_OUT THEN
		EStop();
		
		IF NOT wasEstop THEN
			Execute_Write_Screen();
		END_IF
		
		wasEstop := TRUE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
		
	ELSIF GV_LIFT.DOOR_1_INDICATOR_OUT OR GV_LIFT.DOOR_2_INDICATOR_OUT OR GV_LIFT.DOOR_3_INDICATOR_OUT OR GV_LIFT.DOOR_4_INDICATOR_OUT THEN	
		DoorFaults();	
	
		IF NOT wasDoorFault THEN
			Execute_Write_Screen();
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := TRUE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
		
	ELSIF GV_LIFT.CRUSH_PROTECTION_INDICATOR_OUT THEN
		UpLimit();	
	
		IF NOT wasUpLimit THEN
			Execute_Write_Screen();
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := TRUE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
		
	ELSIF (GV_LIFT.UP_LIMIT_INDICATOR_OUT OR GV_LIFT.CURRENT_POSITION > XML.savedvalues.UpSoftLim) AND NOT GV_MODBUS.limitAcknowledged THEN
		UpLimit();	
		
		IF NOT wasAcknowledge THEN
			Execute_Write_Screen();
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := TRUE;
		
	ELSIF (GV_LIFT.ULTIMATE_LIMIT_INDICATOR_OUT OR GV_LIFT.DOWN_LIMIT_INDICATOR_OUT OR GV_LIFT.CURRENT_POSITION < XML.savedvalues.DownSoftLim) AND NOT GV_MODBUS.limitAcknowledged  THEN
		DownLimit();	
	
		IF NOT wasDwnLimit THEN
			Execute_Write_Screen();
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := TRUE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
		
	ELSIF GV_LIFT.RUN_BUTTON_OUT AND GV_LIFT.MTS_ALLOWED THEN
		MoveToPosition();
		
		IF NOT wasRunningToTarget THEN
			Execute_Write_Screen();
		END_IF
		
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := TRUE;
		wasAcknowledge := FALSE;
		
		GV_MODBUS.limitAcknowledged := FALSE;
	ELSIF GV_LIFT.UP_BUTTON_OUT OR GV_LIFT.DOWN_BUTTON_OUT THEN
		JogLift();
		
		IF NOT wasJogging THEN
			Execute_Write_Screen();	
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := FALSE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := TRUE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
	
		GV_MODBUS.limitAcknowledged := FALSE;
	ELSE
		SelectSpike();
		
		IF NOT GV_MODBUS.wasMTS THEN
			Execute_Write_Screen();	
			doubleWrite := TRUE;		
		END_IF
		
		IF doubleWrite AND GV_MODBUS.doneWriting AND GV_MODBUS.wasMTS THEN
			Execute_Write_Screen();
			doubleWrite := FALSE;
		END_IF
		
		wasEstop := FALSE;
		GV_MODBUS.wasMTS := TRUE;
		wasDoorFault := FALSE;
		wasUpLimit := FALSE;
		wasDwnLimit := FALSE;
		wasJogging := FALSE;
		wasRunningToTarget := FALSE;
		wasAcknowledge := FALSE;
		
	END_IF
	
	IF wasNoScreen THEN
		wasNoScreen := FALSE;
		Execute_Write_Screen();
	END_IF
END_IF

IF screenFound THEN	
	ReadWriteScreen();
	screenSearchAttempts := 0;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="SwitchScreens">
      <LineId Id="370" Count="21" />
      <LineId Id="459" Count="1" />
      <LineId Id="392" Count="2" />
      <LineId Id="601" Count="1" />
      <LineId Id="395" Count="9" />
      <LineId Id="461" Count="1" />
      <LineId Id="405" Count="1" />
      <LineId Id="600" Count="0" />
      <LineId Id="496" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="484" Count="11" />
      <LineId Id="483" Count="0" />
      <LineId Id="591" Count="0" />
      <LineId Id="629" Count="0" />
      <LineId Id="589" Count="0" />
      <LineId Id="615" Count="0" />
      <LineId Id="626" Count="2" />
      <LineId Id="616" Count="0" />
      <LineId Id="618" Count="7" />
      <LineId Id="617" Count="0" />
      <LineId Id="590" Count="0" />
      <LineId Id="498" Count="12" />
      <LineId Id="482" Count="0" />
      <LineId Id="603" Count="1" />
      <LineId Id="408" Count="3" />
      <LineId Id="564" Count="0" />
      <LineId Id="566" Count="0" />
      <LineId Id="412" Count="0" />
      <LineId Id="414" Count="3" />
      <LineId Id="463" Count="1" />
      <LineId Id="418" Count="0" />
      <LineId Id="606" Count="0" />
      <LineId Id="608" Count="1" />
      <LineId Id="647" Count="0" />
      <LineId Id="420" Count="2" />
      <LineId Id="555" Count="0" />
      <LineId Id="557" Count="0" />
      <LineId Id="556" Count="0" />
      <LineId Id="426" Count="3" />
      <LineId Id="465" Count="1" />
      <LineId Id="430" Count="1" />
      <LineId Id="610" Count="0" />
      <LineId Id="432" Count="0" />
      <LineId Id="646" Count="0" />
      <LineId Id="433" Count="4" />
      <LineId Id="542" Count="0" />
      <LineId Id="438" Count="1" />
      <LineId Id="544" Count="1" />
      <LineId Id="547" Count="0" />
      <LineId Id="546" Count="0" />
      <LineId Id="543" Count="0" />
      <LineId Id="440" Count="2" />
      <LineId Id="467" Count="1" />
      <LineId Id="443" Count="1" />
      <LineId Id="611" Count="0" />
      <LineId Id="613" Count="0" />
      <LineId Id="445" Count="11" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>